btn clear and done

--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
     </div>
     
     <div class="colunas">
-        <div class="container">
-            <ul class="lista" id="lista">
-
-            </ul>
+        <div class="menu-action">
+            <button class="btn-clear" id="apagar_tudo">
+                <i class="fa-solid fa-trash"></i>
+                <span class="bt-text">Apagar tudo</span>
+            </button>
         </div>
         <div class="container">
+            <strong>To Do</strong>
             <ul class="lista" id="lista">
 
             </ul>
         </div>
     </div>
-    
+
+    <script src="https://kit.fontawesome.com/8bd4e0de3e.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
