--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
     <title>To Do List</title>
 </head>
 <body>
     <h1>To-Do List</h1>
     <div class="criacao">
-        <form action="" class="adicionar" id="novoItem">
+        <form action="" class="novo_item" id="novoItem">
             <div class="campo">
                 <label for="Tarefa" class="label">Tarefa</label>
                 <input type="text" placeholder="Tarefa" name="text" class="input" id="tarefa">
@@ -25,7 +26,7 @@
                 <input type="text" placeholder="Descrição" name="descricao" class="input" id="descricao">
             </div>
             
-            <input type="submit" value="Adicionar" class="cadastrar" id="cadastrar">
+            <input type="submit" value="Adicionar" class="adicionar" id="adicionar">
                 
         </form>
     </div>
@@ -38,7 +39,7 @@
             </button>
         </div>
         <div class="container">
-            <strong>To Do</strong>
+            <strong class="todo">To Do</strong>
             <ul class="lista" id="lista">
 
             </ul>
