update btn-clear style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="menu-action">
             <button class="btn-clear" id="apagar_tudo">
                 <i class="fa-solid fa-trash"></i>
-                <span class="bt-text">Apagar tudo</span>
+                <span class="btn-text">Limpar tudo</span>
             </button>
         </div>
         <div class="container">
