delete btn function

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" 
+        integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
     <title>To Do List</title>
 </head>
 <body>
-    <h1>To-Do List</h1>
+    <h1 class="title">To-Do List</h1>
     <div class="criacao">
         <form action="" class="novo_item" id="novoItem">
             <div class="campo">
@@ -30,7 +37,6 @@
                 
         </form>
     </div>
-    
     <div class="colunas">
         <div class="menu-action">
             <button class="btn-clear" id="apagar_tudo">
@@ -46,7 +52,6 @@
         </div>
     </div>
 
-    <script src="https://kit.fontawesome.com/8bd4e0de3e.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
