--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" 
@@ -25,8 +21,8 @@
     <div class="criacao">
         <form action="" class="novo_item" id="novoItem">
             <div class="campo">
-                <label for="Tarefa" class="label">Tarefa</label>
-                <input type="text" placeholder="Tarefa" name="text" class="input" id="tarefa">
+                <label for="Tarefa" class="label"  >Tarefa</label>
+                <input required type="text" placeholder="Tarefa" name="text" class="input" id="tarefa">
             </div>
             <div class="campo">
                 <label for="Descrição" class="label">Descrição</label>
@@ -37,21 +33,21 @@
                 
         </form>
     </div>
-    <div class="colunas">
+    <div class="container">
         <div class="menu-action">
             <button class="btn-clear" id="apagar_tudo">
                 <i class="fa-solid fa-trash"></i>
                 <span class="btn-text">Limpar tudo</span>
             </button>
         </div>
-        <div class="container">
-            <strong class="todo">To Do</strong>
+        <div class="container-to-do-list">
             <ul class="lista" id="lista">
 
             </ul>
         </div>
     </div>
 
-    <script src="main.js"></script>
+    <script src="JS/main.js"></script>
+    <script src="JS/validacao.js"></script>
 </body>
 </html>
